# MedAssistAI

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
app/: streamlit_app.py
medical_chatbot/: __init__.py
medical_chatbot/embeddings/: __init__.py  encoder.py
medical_chatbot/evaluation/: __init__.py  metrics.py
medical_chatbot/llm/: __init__.py  groq_client.py
medical_chatbot/ner/: __init__.py  medical_ner.py
medical_chatbot/preprocessing/: __init__.py  text_processor.py
medical_chatbot/rag/: __init__.py  pipeline.py
medical_chatbot/retriever/: __init__.py  semantic_retriever.py
medical_chatbot/utils/: __init__.py  config.py  logger.py
medical_chatbot/vector_store/: faiss_store.py
scripts/: build_index.py  prepare_dataset.py
